# StellarPoll

./: .env  README.md  index.html  package-lock.json  package.json  vite.config.js
contract/: Cargo.toml
contract/src/: lib.rs
scripts/: deploy.sh
src/: App.jsx  config.js  index.css  lib.rs
src/hooks/: usePoll.js  useWalletKit.js
src/utils/: contract.js  errors.js
